fix for gap in mobile version

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ section.hero {
   padding: 10rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 4rem;
   align-items: center;
 }
 
@@ -168,8 +168,9 @@ section.hero {
 
 @media (max-width: 620px) {
   section.hero {
-    padding: 1rem;
+    padding: 0 1rem;
     grid-template-columns: 1fr;
+    align-content: center;
   }
 }
 
